// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppContainer /> with className matches its snapshot 1`] = `
<CustomizedFabric>
  <div
    className=
        y-appContainer
        TEST_CLASSNAME
        {
          color: #343a41;
          font-size: 1.5rem;
          font-weight: 400;
          line-height: 2.0rem;
        }
        html {
          box-sizing: border-box;
          font-size: 62.5%;
        }
        html, body {
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
        }
        *, *::before, *::after {
          box-sizing: inherit;
        }
  >
    paragraph text
  </div>
</CustomizedFabric>
`;

exports[`<AppContainer /> with default options matches its snapshot 1`] = `
<CustomizedFabric>
  <div
    className=
        y-appContainer
        {
          color: #343a41;
          font-size: 1.5rem;
          font-weight: 400;
          line-height: 2.0rem;
        }
        html {
          box-sizing: border-box;
          font-size: 62.5%;
        }
        html, body {
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
        }
        *, *::before, *::after {
          box-sizing: inherit;
        }
  >
    paragraph text
  </div>
</CustomizedFabric>
`;
